  LoadTestModel.collectChartData field plus event and getter added
  LoadTestPanel refactored
  LoadTestModel now collects memory usage data
  LoadTestPanel displays memory usage data chart
  EntityDbServerAdmin.getAllocatedMemory(), getMaxMemory() and getUsedMemory() added
  ServerMonitor now collects memory usage and connection count data
  ServerMonitorPanel displays memory usage and connection count data charts
  Util.getAllocatedMemory(), getUsedMemory(), getMaxMemory() and getFreeMemory() added
  LoadTestModel, some minor field/method name changes
  LoadTestModel.scenarioRandomModel field renamed to scenarioChooser
  UiUtil.createMemoryUsageField() added
  MonitorPanel displays memory usage
  DbConnectionPool.Counter added
  LoadTestPanel UI improved
  EntityDbConnection.getDeleteSQL() bug fixed, now it always includes the 'from' keyword (MySQL doesnt like it when its missing)
  EntityDbConnection.selectRowCount(), now uses 'alias' for subquery alias when selectQuery is available (MySQL requires it)
  Database.getCheckConnectionQuery() added
  AbstractDatabase implements the above returning null
  PostgreSQLDatabase and OracleDatabase override the above
  EntityDefinition, added (subquery) 'as' alias for subquery properties when initializing the select properties, for PostgreSQL
  AbstractDatabase now has default implementations for supportsIsValid(), shutdownEmbedded(), getAuthenticationInfo() and getErrorMessage()
  EntityDbRemoteServer does not check for SID anymore
  SQLServerDatabase no longer throws error if SID is missing
  User.UNIT_TEST_USER added, parses jminor.unittest.username and jminor.unittest.password from system properties, scott/tiger default
  Unit tests now running on H2, HSQL, Derby, MySQL, PostgreSQL, Oracle and SQL Server, fuck yeah
  DbConnectionPoolTest.loadTest() added
  DbConnectionPool now silently disconnects connections checked into a closed connection pool instead of throwing an exception
0.5.3