@@ -3,11 +3,16 @@
  */
 package org.jminor.framework.server.monitor;
 
+import org.jminor.common.db.DbConnection;
 import org.jminor.common.db.User;
+import org.jminor.common.db.pool.ConnectionPool;
 import org.jminor.common.db.pool.ConnectionPoolSettings;
+import org.jminor.common.db.pool.ConnectionPoolStatistics;
+import org.jminor.common.db.pool.monitor.ConnectionPoolInstanceMonitor;
 import org.jminor.framework.server.EntityDbServerAdmin;
 
 import java.rmi.RemoteException;
+import java.sql.SQLException;
 import java.util.ArrayList;
 import java.util.Collection;
 
@@ -29,7 +34,68 @@ public class ConnectionPoolMonitor {
 
   public void refresh() throws RemoteException {
     for (final ConnectionPoolSettings settings : server.getEnabledConnectionPools())
-      connectionPoolInstanceMonitors.add(new ConnectionPoolInstanceMonitor(settings.getUser(), server));
+      connectionPoolInstanceMonitors.add(new ConnectionPoolInstanceMonitor(settings.getUser(), new ConnectionPool() {
+        public ConnectionPoolSettings getConnectionPoolSettings() {
+          try {
+            return server.getConnectionPoolSettings(settings.getUser());
+          }
+          catch (RemoteException e) {
+            throw new RuntimeException(e);
+          }
+        }
+
+        public ConnectionPoolStatistics getConnectionPoolStatistics(long since) {
+          try {
+            return server.getConnectionPoolStatistics(settings.getUser(), since);
+          }
+          catch (RemoteException e) {
+            throw new RuntimeException(e);
+          }
+        }
+
+        public User getUser() {
+          return settings.getUser();
+        }
+
+        public boolean isCollectFineGrainedStatistics() {
+          try {
+            return server.isCollectFineGrainedPoolStatistics(settings.getUser());
+          }
+          catch (RemoteException e) {
+            throw new RuntimeException(e);
+          }
+        }
+
+        public void resetPoolStatistics() {
+          try {
+            server.resetConnectionPoolStatistics(settings.getUser());
+          }
+          catch (RemoteException e) {
+            throw new RuntimeException(e);
+          }
+        }
+
+        public void setCollectFineGrainedStatistics(boolean value) {
+          try {
+            server.setCollectFineGrainedPoolStatistics(settings.getUser(), value);
+          }
+          catch (RemoteException e) {
+            throw new RuntimeException(e);
+          }
+        }
+
+        public void setConnectionPoolSettings(ConnectionPoolSettings settings) {
+          try {
+            server.setConnectionPoolSettings(settings);
+          }
+          catch (RemoteException e) {
+            throw new RuntimeException(e);
+          }
+        }
+        public void checkInConnection(DbConnection dbConnection) {}
+
+        public DbConnection checkOutConnection() throws ClassNotFoundException, SQLException {return null;}
+      }));
   }
 
   public void setConnectionPoolSettings(final ConnectionPoolSettings settings) throws RemoteException {
